Review usage of adoptNS() https://bugs.webkit.org/show_bug.cgi?id=221779

Reviewed by Alex Christensen.

Review usage of adoptNS():
1. Make sure we call adoptNS() as soon as we allocate the object instead of doing it later on, as this is less error-prone
2. Fix cases where we called adoptNS() but really should have retained instead of adopting

Source/WebCore:

* platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm:
(WebCore::PlatformCAFilters::filterValueForOperation):
* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayerCocoa::addAnimationForKey):
* platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::gradualDecoderRefreshCount):
* platform/network/cocoa/ResourceRequestCocoa.mm:
(WebCore::ResourceRequest::doUpdatePlatformRequest):
(WebCore::ResourceRequest::doUpdatePlatformHTTPBody):
* platform/text/cocoa/LocaleCocoa.mm:
(WebCore::createDateTimeFormatter):
* testing/Internals.mm:
(WebCore::Internals::encodedPreferenceValue):

Source/WebKit:

* UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm:
(WebKit::RemoteLayerTreeHost::makeNode):
* UIProcess/RemoteLayerTree/ios/RemoteLayerTreeHostIOS.mm:
(WebKit::RemoteLayerTreeHost::makeNode):


Canonical link: https://commits.webkit.org/233998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272760 268f45cc-cd09-0410-ab3c-d52691b4dbfc