Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm
@@ -258,11 +258,8 @@ void RemoteLayerTreeHost::createLayer(const RemoteLayerTreeTransaction::LayerCre
 #if !PLATFORM(IOS_FAMILY)
 std::unique_ptr<RemoteLayerTreeNode> RemoteLayerTreeHost::makeNode(const RemoteLayerTreeTransaction::LayerCreationProperties& properties)
 {
-    auto makeWithLayer = [&] (RetainPtr<CALayer> layer) {
+    auto makeWithLayer = [&] (RetainPtr<CALayer>&& layer) {
         return makeUnique<RemoteLayerTreeNode>(properties.layerID, WTFMove(layer));
-    };
-    auto makeAdoptingLayer = [&] (CALayer* layer) {
-        return makeWithLayer(adoptNS(layer));
     };
 
     switch (properties.type) {
@@ -277,13 +274,13 @@ std::unique_ptr<RemoteLayerTreeNode> RemoteLayerTreeHost::makeNode(const RemoteL
         return RemoteLayerTreeNode::createWithPlainLayer(properties.layerID);
 
     case PlatformCALayer::LayerTypeTransformLayer:
-        return makeAdoptingLayer([[CATransformLayer alloc] init]);
+        return makeWithLayer(adoptNS([[CATransformLayer alloc] init]));
 
     case PlatformCALayer::LayerTypeBackdropLayer:
     case PlatformCALayer::LayerTypeLightSystemBackdropLayer:
     case PlatformCALayer::LayerTypeDarkSystemBackdropLayer:
 #if ENABLE(FILTERS_LEVEL_2)
-        return makeAdoptingLayer([[CABackdropLayer alloc] init]);
+        return makeWithLayer(adoptNS([[CABackdropLayer alloc] init]));
 #else
         ASSERT_NOT_REACHED();
         return RemoteLayerTreeNode::createWithPlainLayer(properties.layerID);
@@ -296,7 +293,7 @@ std::unique_ptr<RemoteLayerTreeNode> RemoteLayerTreeHost::makeNode(const RemoteL
         return makeWithLayer([CALayer _web_renderLayerWithContextID:properties.hostingContextID]);
 
     case PlatformCALayer::LayerTypeShapeLayer:
-        return makeAdoptingLayer([[CAShapeLayer alloc] init]);
+        return makeWithLayer(adoptNS([[CAShapeLayer alloc] init]));
             
     default:
         ASSERT_NOT_REACHED();
