Source/WebCore/testing/Internals.mm
@@ -109,7 +109,7 @@ String Internals::encodedPreferenceValue(const String& domain, const String& key
 {
     auto userDefaults = adoptNS([[NSUserDefaults alloc] initWithSuiteName:domain]);
     id value = [userDefaults objectForKey:key];
-    auto data = adoptNS([NSKeyedArchiver archivedDataWithRootObject:value requiringSecureCoding:YES error:nullptr]);
+    auto data = retainPtr([NSKeyedArchiver archivedDataWithRootObject:value requiringSecureCoding:YES error:nullptr]);
     return [data base64EncodedStringWithOptions:0];
 }
 
